# MCP-Interop-BakeOff

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.specstory/history/: 2025-10-17_15-31Z-commit-under-jlov7-account-only.md
eval/: agent_gpa_judges.py  metrics.py  taxonomy.json
mcp-server/: README.md  policy.yaml  server.py
mcp_server/: __init__.py  server.py
metrics_archive/: 20251017-174054-transport_metrics.json  20251017-174129-transport_metrics.json  20251017-174904-transport_metrics.json  20251017-175952-transport_metrics.json  20251017-180115-transport_metrics.json  20251017-180305-transport_metrics.json  20251017-180835-transport_metrics.json  20251017-181450-transport_metrics.json  20251017-181511-transport_metrics.json  dashboard.json  dashboard.md
runners/: mistral_runner.py  ms_runner.py  openai_runner.py
scripts/: dashboard.py  report.py  run_matrix.py  trace_summary.py
tasks/: __init__.py  calendar.json  t1_repo_triage.yaml  t2_calendar_merge.yaml  t3_http_etl.yaml  t4_code_patch.yaml
tasks/artifacts/: http_etl.csv  t1_repo_triage_expected.json
tasks/code_module/: __init__.py  example.py
tasks/code_module/tests/: test_example.py
tests/: test_metrics_summary.py  test_runners_smoke.py  test_server_tools.py  test_stdio_pool.py
usb_agents/: __init__.py  policy.py  runner_base.py  tasks.py  telemetry.py  tool_client.py
